--- a/server/projectManage/pom.xml
+++ b/server/projectManage/pom.xml
@@ -4,11 +4,11 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>swagger.demo</groupId>
-	<artifactId>swaggerDemo</artifactId>
+	<artifactId>projectManage</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>swaggerDemo</name>
+	<name>projectManage</name>
 	<description>Demo project for Spring Boot</description>
 
 	<parent>
