--- a/server/projectManage/pom.xml
+++ b/server/projectManage/pom.xml
@@ -63,11 +63,11 @@
 		    <version>1.2.47</version>
 		</dependency>
 		
-	 	<dependency>
-	        <groupId>org.springframework.boot</groupId>
-	        <artifactId>spring-boot-devtools</artifactId>
-	        <optional>true</optional>
-	    </dependency>
+<!--	 	<dependency>-->
+<!--	        <groupId>org.springframework.boot</groupId>-->
+<!--	        <artifactId>spring-boot-devtools</artifactId>-->
+<!--	        <optional>true</optional>-->
+<!--	    </dependency>-->
 	    
 	    <dependency>
 		    <groupId>org.springframework.boot</groupId>
@@ -90,6 +90,16 @@
 		    <groupId>org.springframework.boot</groupId>
 		    <artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>xom</groupId>
+			<artifactId>xom</artifactId>
+			<version>1.2.5</version>
+		</dependency>
+		<dependency>
+			<groupId>com.thoughtworks.xstream</groupId>
+			<artifactId>xstream</artifactId>
+			<version>1.3.1</version>
+		</dependency>
 	    
 	    
 	<!-- 	<dependency>
@@ -97,6 +107,19 @@
 		    <artifactId>aspectjrt</artifactId>
 		    <version>1.9.2</version>
 		</dependency> -->
+
+		<!--http连接-->
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+			<version>4.5.2</version>
+		</dependency>
+		<dependency>
+			<groupId>net.sf.json-lib</groupId>
+			<artifactId>json-lib</artifactId>
+			<version>2.2.2</version>
+			<classifier>jdk15</classifier>
+		</dependency>
 	</dependencies>
 	
 	
