--- a/ui/vue-item-manage/package.json
+++ b/ui/vue-item-manage/package.json
@@ -19,7 +19,8 @@
     "element-ui": "^2.12.0",
     "vue": "^2.5.2",
     "vue-burger-menu": "^1.0.9",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuex": "^3.1.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
